docs: update documentation for CLI diagnostic commands
Update README, getting-started, configuration, and architecture docs
to reflect new unified CLI with subcommands (ps/histo/threads/gc/heap/
info/top), provider abstraction, i18n, and JSON output. Fix install
script Java 21 auto-detection (sed -> awk for macOS compatibility,
jenv/java_home path scanning).